# jlwardy-hue-SecureDownloadsOrchestrator2.0

./: .flake8  .gitignore  =1.0.0  AI_INTEGRATION_GUIDE.md  ARCHITECTURE.md  AUDIT.md  CONFIG_TROUBLESHOOTING.md  DEPLOYMENT.md  FUNCTIONAL_AUDIT.md  GIT_WORKFLOW.md  README.md  TROUBLESHOOTING.md  config.yaml  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh  test_broken_configs.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  self-hosted-test.yml
docs/: gpt_classification_guide.md
examples/: gpt_classification_demo.py  sample_document.txt  sample_script.py  test_code.py  usage_examples.py
orchestrator/: __init__.py  classifier.py  config_loader.py  file_type_detector.py  file_watcher.py  logger.py  main.py  pipeline.py
scripts/: create_eicar.py  demo_git_resolution.sh  git_conflict_resolver.py  setup.py  test_git_conflicts.py  validate_config.py
tests/: conftest.py  test_import_orchestrator.py
tests/integration/: test_e2e_pipeline.py  test_gpt_integration.py
tests/security/: test_archive_bomb.py  test_eicar.py  test_path_validation.py
tests/unit/: test_classifier.py  test_classifier_gpt.py  test_config_loader.py  test_pipeline.py  test_setup_directories.py
